Solve issue: Spacing 2 lines description

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -28,13 +28,13 @@ body
 		input
 			cursor pointer
 			@media screen and (max-width: 350px)
-				padding 5px 0
-.placeholder-fix input:focus::-webkit-input-placeholder
-	color transparent
-.placeholder-fix input:focus::-moz-placeholder
-	color transparent
-.placeholder-fix input:-moz-placeholder
-	color transparent
+				padding 3px 0
+	input:focus::-webkit-input-placeholder
+		color transparent
+	input:focus::-moz-placeholder
+		color transparent
+	input:-moz-placeholder
+		color transparent
 
 button
 	outline none
